--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     const images = [
       '1.jpeg','2.jpeg','3.jpeg','4.jpeg','5.jpeg',
       '50.jpg','51.jpg','52.jpg','53.jpg','54.jpg','55.jpg','56.jpg','57.jpg','58.jpg',
-      '6.jpeg','7.jpeg','8.jpeg','9.jpeg','1.png','2.png','3.png',
+      '6.jpeg','7.jpeg','8.jpeg','9.jpeg','1.png',
       '3.jpg','4.jpg','5.jpg','6.jpg','7.jpg','8.jpg','9.jpg','10.jpg',
       '11.jpg','13.jpg',
       '24.jpg','25.jpg','27.jpg','28.jpg','29.jpg','30.jpg',
@@ -128,5 +128,6 @@
   </script>
 </body>
 </html>
+
 
 
