--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       '6.jpeg','7.jpeg','8.jpeg','9.jpeg','1.png',
       '3.jpg','4.jpg','5.jpg','6.jpg','7.jpg','8.jpg','9.jpg','10.jpg',
       '11.jpg','13.jpg',
-      '24.jpg','25.jpg','27.jpg','28.jpg','29.jpg','30.jpg',
+      '25.jpg','27.jpg','28.jpg','29.jpg','30.jpg',
       '31.jpg','32.jpg','33.jpg','34.jpg','35.jpg','36.jpg',
     ];
     const banner = document.getElementById('banner');
@@ -128,6 +128,7 @@
   </script>
 </body>
 </html>
+
 
 
 
